--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -3,7 +3,7 @@
 
 <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
     <div>
-        <div>
+        <div class="forms">
             <mat-form-field>
                 <input matInput placeholder="Email" formControlName="email" type="email" required />
             </mat-form-field>
