--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar color="primary">
-    <span>YuVi Library</span>
+    <div routerLink="[/main]">
+        <i class="material-icons" height="60" alt="YuVi Logo">spa</i>
+        <span>YuVi Library</span>
+    </div>
     <span class="flex-filler"></span>
     <button mat-button class="nav-btn" routerLink="/register">Register</button>
-    <button mat-button class="nav-btn">Login</button>
+    <button mat-button class="nav-btn" routerLink="/login">Login</button>
 </mat-toolbar>
