--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <i class="material-icons" height="60" alt="YuVi Logo">spa</i>
         <span>YuVi Library</span>
     </div>
-    <button mat-button class="nav-btn" routerLink="/book">Books</button>
+    <button mat-button class="nav-btn" routerLink="/Book/AllBooks">Books</button>
     <button mat-button class="nav-btn" routerLink="/review">Your Reviews</button>
     <span class="flex-filler"></span>
     <button mat-button class="nav-btn" routerLink="/register">Register</button>
