--- a/src/app/components/book/book.component.html
+++ b/src/app/components/book/book.component.html
@@ -1,6 +1,6 @@
 <div>
     <h1>Books</h1>
-    <a mat-raised-button color="primary" routerLink="/book/CreateBook">Create a book</a>
+    <a mat-raised-button color="primary" routerLink="/book/CreateBook">Create a Book</a>
 </div>
 
 <div>
