--- a/src/app/components/book/book-edit/book-edit.component.html
+++ b/src/app/components/book/book-edit/book-edit.component.html
@@ -1,7 +1,7 @@
-<p>Create Book</p>
+<h1>Edit Recipe</h1>
 <br />
 
-<form (ngSubmit)="onSubmit()" [formGroup]="bookForm">
+<form (ngSubmit)="onSubmit()" [formGroup]="editForm">
     <div>
         <div>
             <mat-form-field>
@@ -25,11 +25,11 @@
             <mat-checkbox formControlName="Owned">Owned?</mat-checkbox>
         </div>
         <div>
-                <mat-checkbox formControlName="Reviewed">Reviewed?</mat-checkbox>
+            <mat-checkbox formControlName="Reviewed">Reviewed?</mat-checkbox>
         </div>
     </div>
-    <button mat-raised-button class="nav-btn" color="primary" type="submit">Create Book</button>
+
+    <button mat-raised-button class="nav-btn" color="primary" type="submit">Submit Edit</button>
 </form>
 
-<a mat-button routerLink="/book/AllBooks">Back to List</a>
-
+<a mat-button routerLink="/book/AllBooks">Back to Book List</a>
