--- a/src/app/components/book/book-edit/book-edit.component.html
+++ b/src/app/components/book/book-edit/book-edit.component.html
@@ -1,4 +1,4 @@
-<h1>Edit Recipe</h1>
+<h1>Edit Book</h1>
 <br />
 
 <form (ngSubmit)="onSubmit()" [formGroup]="editForm">
@@ -15,7 +15,7 @@
         </div>
         <div>
             <mat-form-field>
-                <mat-select placeholder="Book Genre" formControlName="BookGenre" required>
+                <mat-select placeholder="Book Genre" formControlName="BookGenre" type="BookGenre" required>
                     <mat-option *ngFor="let genre of bookGenre" [value]="enumerationComponent.bookGenre">
                     </mat-option>
                 </mat-select>
