--- a/src/app/components/book/book-create/book-create.component.html
+++ b/src/app/components/book/book-create/book-create.component.html
@@ -15,8 +15,8 @@
         </div>
         <div>
             <mat-form-field>
-                <mat-select placeholder="Book Genre" formControlName="BookGenre" required>
-                    <mat-option *ngFor="let genre of bookGenre" [value]="enumerationComponent.bookGenre">
+                <mat-select placeholder="Book Genre" formControlName="bookGenre">
+                    <mat-option *ngFor="let genre of bookGenre.values();" [value]="enumerationComponent.bookGenre">
                     </mat-option>
                 </mat-select>
             </mat-form-field>
