--- a/src/app/components/book/book-create/book-create.component.html
+++ b/src/app/components/book/book-create/book-create.component.html
@@ -15,17 +15,24 @@
         </div>
         <div>
             <mat-form-field>
-                <mat-select placeholder="Book Genre" formControlName="bookGenre">
-                    <mat-option *ngFor="let genre of bookGenre.values();" [value]="enumerationComponent.bookGenre">
-                    </mat-option>
+                <mat-label >Book Genre</mat-label>
+                <mat-select formControlName="BookGenre">
+                    <mat-option value="Nonfiction">Non-Fiction</mat-option>
+                    <mat-option value="Fantasy">Fantasy</mat-option>
+                    <mat-option value="SciFi">SciFi</mat-option>
+                    <mat-option value="Mystery">Mystery</mat-option>
+                    <mat-option value="Romance">Romance</mat-option>
+                    <mat-option value="Horror">Horror</mat-option>
+                    <mat-option value="Historical">Historical</mat-option>
+                    <mat-option value="Realism">Realism</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
         <div>
-            <mat-checkbox formControlName="Owned">Owned?</mat-checkbox>
+            <mat-checkbox formControlName="Owned"  [checked]="model.Owned" (change)="model.Owned = !model.consent_obtained_ind">Owned?</mat-checkbox>
         </div>
         <div>
-                <mat-checkbox formControlName="Reviewed">Reviewed?</mat-checkbox>
+            <mat-checkbox formControlName="Reviewed"  [checked]="model.Reviewed" (change)="model.Reviewed = !model.consent_obtained_ind">Reviewed?</mat-checkbox>
         </div>
     </div>
     <button mat-raised-button class="nav-btn" color="primary" type="submit">Create Book</button>
