--- a/src/app/components/book/book-edit/book-edit.component.html
+++ b/src/app/components/book/book-edit/book-edit.component.html
@@ -16,7 +16,7 @@
         <div>
             <mat-form-field>
                 <mat-select placeholder="Book Genre" formControlName="BookGenre" type="BookGenre" required>
-                    <mat-option *ngFor="let genre of bookGenre" [value]="enumerationComponent.bookGenre">
+                    <mat-option>
                     </mat-option>
                 </mat-select>
             </mat-form-field>
