--- a/src/app/components/book/book-edit/book-edit.component.html
+++ b/src/app/components/book/book-edit/book-edit.component.html
@@ -32,4 +32,4 @@
     <button mat-raised-button class="nav-btn" color="primary" type="submit">Submit Edit</button>
 </form>
 
-<a mat-button routerLink="/book/AllBooks">Back to Book List</a>
+<button mat-button class="nav-btn" routerLink="/book/AllBooks">Back to Book List</button>
