header/deleteformswrong,but createworks100

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,9 +3,12 @@
         <i class="material-icons" height="60" alt="YuVi Logo">spa</i>
         <span>YuVi Library</span>
     </div>
-    <button mat-button class="nav-btn" routerLink="/book/AllBooks">Books</button>
-    <button mat-button class="nav-btn" routerLink="/review">Your Reviews</button>
-    <span class="flex-filler"></span>
-    <button mat-button class="nav-btn" routerLink="/register">Register</button>
-    <button mat-button class="nav-btn" routerLink="/login">Login</button>
+
+        <button mat-button class="nav-btn" routerLink="/book/AllBooks">Books</button>
+        <button mat-button class="nav-btn" routerLink="/review">Your Reviews</button>
+        <span class="flex-filler"></span>
+        <button *ngIf="!authService.loggedIn" mat-button class="nav-btn"  routerLink="/register">Register</button>
+        <button *ngIf="!authService.loggedIn" mat-button class="nav-btn" routerLink="/login">Login</button>
+        <button *ngIf="authService.loggedIn" mat-button class="nav-btn" routerLink="/Logout">Logout</button>
+
 </mat-toolbar>
