--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,20 +1,22 @@
-<p>Login</p>
+<div class="LoginPage">
+    <p>Login</p>
 
-<form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-    <div>
+    <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
         <div>
-            <mat-form-field>
-                <input matInput placeholder="Email" formControlName="email" type="email" required />
-            </mat-form-field>
-        </div>
+            <div>
+                <mat-form-field>
+                        <input matInput placeholder="Email" formControlName="email" type="email" required />
+                </mat-form-field>
+            </div>
 
-        <div>
-            <mat-form-field>
-                <input matInput placeholder="Password" formControlName="password" type="password" required />
-            </mat-form-field>
+            <div>
+                <mat-form-field>
+                    <input matInput placeholder="Password" formControlName="password" type="password" required />
+                </mat-form-field>
+            </div>
         </div>
-    </div>
-    <button mat-raised-button class="nav-btn" color="primary" type="submit">Login</button>
-</form>
-<br />
-<a routerLink="/register">Register as a new user</a>
+        <button mat-raised-button class="nav-btn" color="primary" type="submit">Login</button>
+    </form>
+        <br />
+    <a routerLink="/register">Register as a new user</a>
+</div>
