--- a/src/app/components/book/book-edit/book-edit.component.html
+++ b/src/app/components/book/book-edit/book-edit.component.html
@@ -15,9 +15,16 @@
         </div>
         <div>
             <mat-form-field>
-                <mat-select placeholder="Book Genre" formControlName="BookGenre" type="BookGenre" required>
-                    <mat-option>
-                    </mat-option>
+                <mat-label >Book Genre</mat-label>
+                <mat-select formControlName="BookGenre">
+                    <mat-option value="Nonfiction">Non-Fiction</mat-option>
+                    <mat-option value="Fantasy">Fantasy</mat-option>
+                    <mat-option value="SciFi">SciFi</mat-option>
+                    <mat-option value="Mystery">Mystery</mat-option>
+                    <mat-option value="Romance">Romance</mat-option>
+                    <mat-option value="Horror">Horror</mat-option>
+                    <mat-option value="Historical">Historical</mat-option>
+                    <mat-option value="Realism">Realism</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
