--- a/src/app/components/book/book-create/book-create.component.html
+++ b/src/app/components/book/book-create/book-create.component.html
@@ -29,10 +29,10 @@
             </mat-form-field>
         </div>
         <div>
-            <mat-checkbox formControlName="Owned"  [checked]="model.Owned" (change)="model.Owned = !model.consent_obtained_ind">Owned?</mat-checkbox>
+            <mat-checkbox formControlName="Owned">Owned?</mat-checkbox>
         </div>
         <div>
-            <mat-checkbox formControlName="Reviewed"  [checked]="model.Reviewed" (change)="model.Reviewed = !model.consent_obtained_ind">Reviewed?</mat-checkbox>
+            <mat-checkbox formControlName="Reviewed">Reviewed?</mat-checkbox>
         </div>
     </div>
     <br/>
