--- a/src/app/components/book/book-edit/book-edit.component.html
+++ b/src/app/components/book/book-edit/book-edit.component.html
@@ -1,6 +1,7 @@
 <h1>Edit Book</h1>
 <br />
 
+<div *ngIf="book">
 <form (ngSubmit)="onSubmit()" [formGroup]="editForm">
     <div>
         <div>
@@ -38,5 +39,5 @@
 
     <button mat-raised-button class="nav-btn" color="primary" type="submit">Submit Edit</button>
 </form>
-
+</div>
 <button mat-button class="nav-btn" routerLink="/book/AllBooks">Back to Book List</button>
