--- a/src/app/components/review/review-edit/review-edit.component.html
+++ b/src/app/components/review/review-edit/review-edit.component.html
@@ -1,7 +1,8 @@
-<h1>Create Review</h1>
+<h1>Edit Review</h1>
 <br />
 
-<form (ngSubmit)="onSubmit()" [formGroup]="reviewForm">
+<div *ngIf="review">
+<form (ngSubmit)="onSubmit()" [formGroup]="editForm">
     <div>
         <div>
             <mat-form-field>
@@ -28,10 +29,6 @@
                 <input matInput placeholder="My Review" formControlName="MyReview" type="MyReview" required />
             </mat-form-field>
         </div>
-    </div>
-    <br/>
-    <button mat-raised-button class="nav-btn" color="primary" type="submit">Create Review</button>
-</form>
-
-<a mat-button routerLink="/review/AllReview">Back to List</a>
-
+    <button mat-raised-button class="nav-btn" color="primary" type="submit">Submit Edit</button>
+</div>
+<button mat-button class="nav-btn" routerLink="/review/AllReviews">Back to Reviews</button>
