--- a/src/app/components/review/review-create/review-create.component.html
+++ b/src/app/components/review/review-create/review-create.component.html
@@ -5,11 +5,6 @@
     <div>
         <div>
             <mat-form-field>
-                <input matInput placeholder="ReviewId" formControlName="ReviewId" type="ReviewId" required />
-            </mat-form-field>
-        </div>
-        <div>
-            <mat-form-field>
                 <input matInput placeholder="ReviewedBookId" formControlName="ReviewedBookId" type="ReviewedBookId" required />
             </mat-form-field>
         </div>
@@ -33,5 +28,5 @@
     <button mat-raised-button class="nav-btn" color="primary" type="submit">Create Review</button>
 </form>
 
-<a mat-button routerLink="/review/AllReview">Back to List</a>
+<a mat-button routerLink="/review/AllReviews">Back to List</a>
 
