--- a/src/app/components/review/review.component.html
+++ b/src/app/components/review/review.component.html
@@ -3,7 +3,7 @@
     <a mat-raised-button color="primary" routerLink="/review/CreateReview">Create a Book Review</a>
 </div>
 
-<div *ngIf="review">
+
     <br>
     <mat-table #table [dataSource]="dataSource">
         <mat-header-row *matHeaderRowDef="columnNames"></mat-header-row>
@@ -22,7 +22,7 @@
         </ng-container>
 
         <ng-container matColumnDef="booktitle">
-            <mat-header-cell *matHeaderCellDef>Book Title</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef>Book Id</mat-header-cell>
             <mat-cell *matCellDef="let review;">{{review.ReviewedBookId}}</mat-cell>
         </ng-container>
 
@@ -49,4 +49,3 @@
             </mat-cell>
         </ng-container>
     </mat-table>
-</div>
